<resources>
    <string name="app_name">Tapping Application</string>

    <!-- Main Menu -->
    <string name="P_ID">PID</string>
    <string name="P_Age">Age</string>
    <string name="P_Gender">Gender</string>
    <string name="P_hand">Dominant hand</string>

    <!-- btn_text -->
    <string name="p_info_btn">참가자 정보 입력/수정</string>

    <string name="menu_name_1">1단계</string>
    <string name="menu_name_2">2단계</string>
    <string name="menu_name_3">3단계</string>
    <string name="menu_name_4">4단계</string>

    <string name="start">시작하기</string>
    <string name="next">다음</string>
    <string name="step_end">메뉴</string>
    <string name="step_return">다시하기</string>
    <string name="step_sub">sub-task</string>

    <string name="ing_M">메뉴</string>
    <!--    -->
    <string name="step_1_info">반갑습니다!\n\n아래 버튼을 누르면 1단계 측정이 시작됩니다.</string>
    <string name="step_1_end">1단계 측정이 완료되었습니다.\n\n재측정하시려면 다시하기 버튼을, 다음 단계로 넘어가시려면 메뉴 버튼을 눌러주세요.</string>
    <string name="step_1_ing">오른손과 왼손 중 더 자주 사용하시는 손을 사용해\n\n가장 편안하게 느껴지는 빠르기로 화면을 20번 두들겨 주세요.</string>
    <string name="step_1_ing2">오른손과 왼손 중 더 자주 사용하시는 손을 사용해 가장 편안하게 느껴지는 빠르기로 화면을 20번 두들겨 주세요.</string>


    <string name="step_2_info">아래 버튼을 누르면 2단계 측정이 시작됩니다.</string>
    <string name="step_2_ing">리듬에 맞추어 우세손으로 화면을 20번 두들겨 주세요.</string>
    <string name="step_2_end">2단계 측정이 완료되었습니다.\n\n 재측정하시려면 다시하기 버튼을, 다음 단계로 넘어가시려면 메뉴 버튼을 눌러주세요.</string>

    <string name="step_3_info">아래 버튼을 누르면 3단계 측정이 시작됩니다.</string>
    <string name="step_3_ing">양손을 동시에 화면을 20번 두들겨 주세요.</string>
    <string name="step_3_end">3단계 측정이 완료되었습니다.\n\n재측정하시려면 다시하기 버튼을, 다음 단계로 넘어가시려면 메뉴 버튼을 눌러주세요.</string>

    <string name="step_4_info">아래 버튼을 누르면 4단계 측정이 시작됩니다.</string>
    <string name="step_4_ing">우세손부터 양손을 번갈아 화면을 20번 두들겨 주세요.</string>
    <string name="step_4_end">4단계 측정이 완료되었습니다.\n\n재측정하시려면 다시하기 버튼을, 다음 단계로 넘어가시려면 메뉴 버튼을 눌러주세요.</string>

</resources>