<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/step1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/menu_name_1"
        app:layout_constraintBottom_toTopOf="@+id/step2"
        app:layout_constraintEnd_toStartOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/p_info"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="300dp"
        android:text="@string/step_1_ing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/step1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
    />


    <Button
        android:id="@+id/step2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/menu_name_2"
        app:layout_constraintBottom_toTopOf="@+id/step3"
        app:layout_constraintEnd_toStartOf="@id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step1" />

    <TextView
        android:id="@+id/textView2"
        style="@style/p_info"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="300dp"
        android:text="@string/step_2_ing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/step2"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/step3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/menu_name_3"
        app:layout_constraintBottom_toTopOf="@+id/step4"
        app:layout_constraintEnd_toStartOf="@id/textView3"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf="@+id/step2" />

    <TextView
        android:id="@+id/textView3"
        style="@style/p_info"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="300dp"
        android:text="@string/step_3_ing"
        app:layout_constraintBottom_toTopOf="@id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/step3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/step4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:text="@string/menu_name_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step3" />

    <TextView
        android:id="@+id/textView4"
        style="@style/p_info"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="300dp"
        android:text="@string/step_4_ing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/step4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />




</androidx.constraintlayout.widget.ConstraintLayout>