<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StepOneActivityEnd">

    <TextView
        android:id="@+id/textView"
        style="@style/step_1_info"
        android:layout_width="849dp"
        android:layout_height="193dp"
        android:layout_marginTop="107dp"
        android:text="@string/step_1_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menu_button"
        style="@style/start_btn"
        android:layout_width="254dp"
        android:layout_height="228dp"
        android:layout_marginStart="278dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="278dp"
        android:layout_marginBottom="35dp"
        android:text="@string/step_end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/return_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/return_btn"
        style="@style/start_btn"
        android:layout_width="254dp"
        android:layout_height="228dp"
        android:layout_marginStart="278dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="278dp"
        android:layout_marginBottom="35dp"
        android:text="@string/step_return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/menu_button"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>